Fix Navbar overlapping

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: auto!important;
+  padding-right: 0px!important;
 }
 
 code {
